# IoTEcosystem

./: README.md
Cloud/Cloud_To_Cloud/: CMakeLists.txt
Cloud/Cloud_To_Cloud/include/: BaseResource.h  CIConnector.h  Device.h  DeviceManager.h  HttpClient.h  IHttpRequest.h  JDHttpRequest.h  ResourceSet.h  RsTypes.h  Util.h  WuLianHttpRequest.h
Cloud/Cloud_To_Cloud/include/c_common/: iotivity_config.h
Cloud/Cloud_To_Cloud/src/: CIConnector.cpp  DeviceManager.cpp  HttpClient.cpp  JDHttpRequest.cpp  ResourceServer.cpp  WuLianHttpRequest.cpp
Cloud/JAVA_IO/AIO_Client/: .project
Cloud/JAVA_IO/AIO_Server/: .project
Cloud/JAVA_IO/BIO_Client/: .project
Cloud/JAVA_IO/BIO_Server/: .project
Cloud/JAVA_IO/NIO_Client/: .project
Cloud/JAVA_IO/NIO_Client/data/: tip.txt
Cloud/JAVA_IO/NIO_Server/: .project
Controllee/IoTivityDevice/: build.gradle
Controllee/IoTivityDevice/app/: build.gradle  proguard-rules.pro
Controllee/IoTivityDevice/app/libs/: iotivity-base-armeabi-v7a-debug.aar  iotivity-base-armeabi-v7a-release.aar
Controllee/IoTivityDevice/app/src/main/: AndroidManifest.xml
Controllee/IoTivityDevice/gradle/wrapper/: gradle-wrapper.properties
Controllee/SLAM/: CMakeLists.txt
Controllee/SLAM/src/: slam.cpp
Controller/Android/PluginPlatform/app/: build.gradle  proguard-rules.pro
Controller/Android/PluginPlatform/gradle/wrapper/: gradle-wrapper.properties
Controller/Linux_Tizen/PluginPlatform/: CMakeLists.txt
Controller/Linux_Tizen/PluginPlatform/inc/: PluginPlatformService.h  PluginTaskManager.h  pluginplatform.h
Controller/Linux_Tizen/PluginPlatform/inc/async/: DownloadPluginTask.h  FindPluginInfoTask.h  InstallPluginTask.h  PluginTask.h  UpdatePluginTask.h
Controller/Linux_Tizen/PluginPlatform/inc/callback/: DownloadPluginCallBack.h  FindPluginCallBack.h  PluginTaskCallback.h  PluginTaskResponseCallback.h
Controller/Linux_Tizen/PluginPlatform/inc/constants/: BgServiceState.hpp  ErrorCode.hpp  StateCode.hpp  SuccessCode.hpp  TaskStateCode.h
Controller/Linux_Tizen/PluginPlatform/inc/database/: DatabaseHelper.h  PluginDBHelper.h  PluginDBManager.h
Controller/Linux_Tizen/PluginPlatform/inc/galaxyapps/: GalaxyAppsRequest.h  PluginCNServerUriRequest.h  PluginFileRequest.h  PluginInfoRequest.h
Controller/Linux_Tizen/PluginPlatform/inc/info/: ConfigInfo.hpp  HostInfo.hpp  PluginInfo.hpp  PluginServiceInfo.h
Controller/Linux_Tizen/PluginPlatform/inc/service/: PluginBgService.hpp  PluginUpdateScheduler.h
Controller/Linux_Tizen/PluginPlatform/inc/util/: CHttpClient.h  Common.h  DataType.h  Downloader.h  FileDownloader.h  FileUtil.h  GHandler.h  Handler.h  HashHelper.h  Log.h  Mutex.h  (+5 more)
Controller/Linux_Tizen/PluginPlatform/src/: PluginPlatform.cpp  PluginPlatformService.cpp  PluginTaskManager.cpp
Controller/Tizen/plugin-platform/: .cproject  .project  .sdk_delta.info  project_def.prop  tizen-manifest.xml
Controller/Tizen/plugin-platform/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
Controller/Tizen/plugin-platform/inc/: pluginplatform.h
Controller/Tizen/plugin-platform/src/: pluginplatform.cpp
(+127 files in other folders)
